# kernighan-ritchie-exercises

./: CMakeLists.txt  README.md
src/: 1_02.c  1_03.c  1_04.c  1_05.c  1_06.c  1_07.c  1_08.c  1_09.c  1_10.c  1_12.c  1_13.c  1_14.c  1_15.c  1_16.c  1_17.c  1_18.c  1_19.c  1_20-21.c  1_22.c  1_23.c  1_24.c  2_01.c  2_02.c  2_03.c  2_04.c  2_05.c  2_06.c  2_07.c  2_08.c  2_09.c  2_10.c  3_01.c  3_02.c  3_03.c  3_04.c  3_05.c  3_06.c  4_01.c  4_02.c  4_03-04-05-06-11.c  (+55 more)
