add_executable(1_01 1_01.c)
add_executable(1_02 1_02.c)
add_executable(1_03 1_03.c)
add_executable(1_04 1_04.c)
add_executable(1_05 1_05.c)
add_executable(1_06 1_06.c)
add_executable(1_07 1_07.c)
add_executable(1_08 1_08.c)
add_executable(1_09 1_09.c)
add_executable(1_10 1_10.c)
add_executable(1_12 1_12.c)
add_executable(1_13 1_13.c)
add_executable(1_14 1_14.c)
add_executable(1_15 1_15.c)
add_executable(1_16 1_16.c)
add_executable(1_17 1_17.c get_line.c)
add_executable(1_18 1_18.c get_line.c)
add_executable(1_19 1_19.c get_line.c)
add_executable(1_20 1_20-21.c detab.c get_line.c)
target_compile_definitions(1_20 PRIVATE DETAB)
add_executable(1_21 1_20-21.c entab.c get_line.c)
target_compile_definitions(1_21 PRIVATE ENTAB)
add_executable(1_22 1_22.c get_line.c)
add_executable(1_23 1_23.c)
add_executable(1_24 1_24.c)
add_executable(2_01 2_01.c)
add_executable(2_02 2_02.c)
add_executable(2_03 2_03.c)
add_executable(2_04 2_04.c)
add_executable(2_05 2_05.c)
add_executable(2_06 2_06.c)
add_executable(2_07 2_07.c)
add_executable(2_08 2_08.c)
add_executable(2_09 2_09.c)
add_executable(2_10 2_10.c)
add_executable(3_01 3_01.c)
add_executable(3_02 3_02.c)
add_executable(3_03 3_03.c)
add_executable(3_04 3_04.c)
add_executable(3_05 3_05.c)
add_executable(3_06 3_06.c)
add_executable(4_01 4_01.c)
add_executable(4_02 4_02.c)
add_executable(4_03-04-05-06-11 4_03-04-05-06-11.c)
add_executable(4_07 4_07.c)
add_executable(4_08 4_08.c)
add_executable(4_09 4_09.c getch.c)
add_executable(4_10 4_10.c get_line.c)
add_executable(4_12 4_12.c)
add_executable(4_13 4_13.c)
add_executable(4_14 4_14.c)
add_executable(5_01 5_01.c getch.c)
add_executable(5_02 5_02.c getch.c)
add_executable(5_03 5_03.c)
add_executable(5_04 5_04.c)
add_executable(5_05 5_05.c)
add_executable(5_06 5_06.c)
add_executable(5_07 5_07.c get_line.c)
add_executable(5_08 5_08.c)
add_executable(5_09 5_09.c)
add_executable(5_10 5_10.c)
add_executable(5_11_detab 5_11.c detab.c get_line.c)
target_compile_definitions(5_11_detab PRIVATE DETAB)
add_executable(5_11_entab 5_11.c entab.c get_line.c)
target_compile_definitions(5_11_entab PRIVATE ENTAB)
add_executable(5_12_detab 5_12.c detab.c get_line.c)
target_compile_definitions(5_12_detab PRIVATE DETAB)
add_executable(5_12_entab 5_12.c entab.c get_line.c)
target_compile_definitions(5_12_entab PRIVATE ENTAB)
add_executable(5_13 5_13.c get_line.c)
add_executable(5_14-15-16 5_14-15-16.c get_line.c)
add_executable(5_17 5_17.c get_line.c)
add_executable(5_18 5_18.c)
add_executable(5_19 5_19.c)
add_executable(5_20 5_20.c)
add_executable(6_01 6_01.c)
add_executable(6_02 6_02.c)
add_executable(6_03 6_03.c)
add_executable(6_04 6_04.c)
add_executable(6_05 6_05.c)
add_executable(6_06 6_06.c)
add_executable(7_01_lower_to_upper 7_01.c)
add_executable(7_01_upper_to_lower 7_01.c)
add_executable(7_02 7_02.c)
add_executable(7_03 7_03.c)
add_executable(7_04 7_04.c)
add_executable(7_05 7_05.c)
add_executable(7_06 7_06.c)
add_executable(7_07 7_07.c)
add_executable(7_08 7_08.c)
add_executable(7_09 7_09.c)
add_executable(8_01 8_01.c)
add_executable(8_02 8_02.c)
add_executable(8_03 8_03.c)
add_executable(8_04 8_04.c)
add_executable(8_05 8_05.c)
add_executable(8_06 8_06.c)
add_executable(8_07 8_07.c)
add_executable(8_08 8_08.c)
